@@ -7,39 +7,29 @@ import com.order.events.schema.PlaceEvent;
 import com.order.projections.ProjectionService;
 import com.order.utils.errors.ValidationError;
 import com.order.utils.validator.Validator;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
-import javax.inject.Inject;
-import javax.inject.Singleton;
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
-@Singleton
+@Service
 public class EventService {
-    final Validator validator;
+    @Autowired
+    Validator validator;
 
-    final EventRepository eventRepository;
-
-    final ProjectionService projectionService;
-
-    @Inject
-    public EventService(
-            Validator validator,
-            EventRepository eventRepository,
-            ProjectionService projectionService
-    ) {
-        this.validator = validator;
-        this.eventRepository = eventRepository;
-        this.projectionService = projectionService;
-    }
+    @Autowired
+    EventRepository eventRepository;
+    @Autowired
+    ProjectionService projectionService;
 
     public Event placeOrder(NewPlaceData data) throws ValidationError {
         validator.validate(data);
 
-        Event event = eventRepository.findPlaceByCartId(data.cartId);
+        Event event = eventRepository.findPlaceByCartId(data.cartId).stream().findFirst().orElse(null);
         if (event == null) {
             PlaceEvent.Article[] articles = Arrays.stream(data.articles) //
                     .map(a -> new PlaceEvent.Article(a.id, a.quantity)) //
-                    .collect(Collectors.toList()) //
+                    .toList() //
                     .toArray(new PlaceEvent.Article[]{});
 
             PlaceEvent place = new PlaceEvent(data.cartId, data.userId, articles);
